* bandaid fix for timeout issue in CiscoRTTMonEchoICMP probe ...
  since the probe needs a longer timeout, the basefork parent needs to wait
  longer too ... a local timeout configurable with higher default should fix
  this. -- tobi

* make the build system compatible with HTML::Parser >= 3.64 
  --niko, reported as Debian bug #560562

* update prototype and scriptaculous libraries to make zooming work again on
  ff3.5, to make it work, make sure to update the basepage.html to include

    cropper/lib/scriptaculous.js?load=builder,effects,dragdrop

 --tobi

* fixed url in alert  messages triggered from slaves. as reported by Nathan
  Long --tobi

* fix a typo in configuration example 4, spotted by Guglielmo Bondioni
  <guglielmo.bondioni *gmail.com> --niko

* the Radius probe now has an 'allowreject' variable that makes it treat
  rejected RADIUS authentications as OK. 
  Patch by Jeremy Laidman <jlaidman *rebel-it.com.au> --niko

* help --static to work a bit better by fixing the dummy script_name
  implementation -- tobi

* disable __DIE__ handler inside evals -- tobi

* fix broken FPing.pm error message call -- tobi

* smokeinfo: new tool to extract numeric data from a smokeping installation
  creation sponsored by Swisscom Hospitality -- tobi

* new matcher:  ExpLoss.pm matcher.
  It produces an exponential weighted average and supports RMON-like
  thresholds to obtain stable node status detection. -- Veniamin Konoplev V.Konoplev rssi.ru


* let cgi processes die on config change this provides for smoother
  behaviour than a horde of instances going for a cfg reload. --tobi

* tune speedy parameters for a more reasonable behaviour --tobi

* rewrite storing of multiple slave updates for better performance --tobi

* fix bug in storage of slave updatesL: when the local smokeping daemon
  running only the first update could be read back, the others were hidden
  in the storeable. --tobi

* set sig child to IGNORE for automatic reaping of zombies -- tobi
